<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/uy_egasi"
            android:padding="15dp"
            app:startIconDrawable="@drawable/owner">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uyegasiET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/uy_raqami"
            android:padding="15dp"
            android:layout_below="@id/layout1"
            app:startIconDrawable="@drawable/number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uyraqamiET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/uy_egasi_telefon_raqami"
            android:padding="15dp"
            android:layout_below="@id/layout2"
            app:startIconDrawable="@drawable/call">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/egasiniraqamiET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/qayerda_joylashgan"
            android:padding="15dp"
            android:layout_below="@id/layout3"
            app:startIconDrawable="@drawable/geolocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joylashuviET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/kadastr_raqami"
            android:padding="15dp"
            android:layout_below="@id/layout4"
            app:startIconDrawable="@drawable/seven">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kadastrET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


</ScrollView>