<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EDITlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/yangi_uy_egasi"
            android:padding="15dp"
            app:startIconDrawable="@drawable/owner">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EDITuyegasiET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EDITlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/yangi_uy_raqami"
            android:padding="15dp"
            android:layout_below="@id/EDITlayout1"
            app:startIconDrawable="@drawable/number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EDITuyraqamiET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EDITlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/yangi_telefon_raqam"
            android:padding="15dp"
            android:layout_below="@id/EDITlayout2"
            app:startIconDrawable="@drawable/call">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EDITegasiniraqamiET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EDITlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/yangi_joylashuv"
            android:padding="15dp"
            android:layout_below="@id/EDITlayout3"
            app:startIconDrawable="@drawable/geolocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EDITjoylashuviET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EDITlayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/yangi_kadastr_raqami"
            android:padding="15dp"
            android:layout_below="@id/EDITlayout4"
            app:startIconDrawable="@drawable/seven">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EDITkadastrET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>




</ScrollView>