<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/uylarRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"/>

    </ScrollView>

    <TextView
        android:id="@+id/nohome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ro_yxatda_uylar_mavjud_emas"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/uyqoshish"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_background"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="3"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center|center_horizontal"
                android:padding="1dp"
                android:text="@string/yangi_uy"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/addicon"
                android:padding="10dp"
                android:src="@drawable/add"
                android:tint="@color/black"
                tools:ignore="UseAppTint" />



    </LinearLayout>

</RelativeLayout>